--- a/src/components/dashboard.html
+++ b/src/components/dashboard.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minha Nuvem</title>
-  <link rel="stylesheet" href="assets/css/dashboard.css">
-    <link rel="stylesheet" href="assets/css/toggle-dashboard.css">
+  <link rel="stylesheet" href="src/assets/css/dashboard.css">
+    <link rel="stylesheet" href="src/assets/css/toggle-dashboard.css">
   <link rel="stylesheet" href="assets/css/variables.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css">
@@ -151,9 +151,9 @@
   </aside>
   </div>
 
-  <script src="assets/js/dashboard.js"></script>
-    <script src="assets/js/toggle-dashboard.js"></script>
-    <script src="assets/js/app.js"></script>
+  <script src="src/assets/js/dashboard.js"></script>
+    <script src="src/assets/js/toggle-dashboard.js"></script>
+    <script src="src/assets/js/app.js"></script>
 </body>
 
 </html>
