imagem logo add

--- a/src/components/dashboard.html
+++ b/src/components/dashboard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minha Nuvem</title>
   <link rel="stylesheet" href="src/assets/css/dashboard.css">
-    <link rel="stylesheet" href="src/assets/css/toggle-dashboard.css">
+  <link rel="stylesheet" href="src/assets/css/toggle-dashboard.css">
   <link rel="stylesheet" href="assets/css/variables.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css">
@@ -18,7 +18,7 @@
   <header class="app-header">
 
     <div class="logo-area">
-      <img src="images/logo.png" alt="Logo" width="28" height="28" />
+      <img src="src/assets/images/logo.png" alt="Logo" width="28" height="28" />
       <span class="app-name">Minha Nuvem</span>
     </div>
     <div class="right-header">
@@ -35,7 +35,7 @@
 
       <div class="user-info">
         <span id="userName"></span>
-        <img src="images/vetor-usuario.png" alt="Usuário" width="28" height="28" />
+        <img src="src/assets/images/vetor-usuario.png" alt="Usuário" width="28" height="28" />
       </div>
 
       <button id="themeToggle">
