--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -52,7 +52,7 @@ body.dark #sunIcon {
 .right-header {
   display: flex;
   align-items: center;
-  gap: 20px; 
+  gap: 20px;
   padding: 40px;
 }
 
@@ -100,7 +100,7 @@ body.dark #sunIcon {
   background: var(--cor-sidebar);
   color: var(--cor-texto);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  
+
 }
 
 .logo-area {
@@ -157,9 +157,9 @@ img {
 #quickAccessList {
   flex-grow: 1;
 }
- 
+
 li {
- list-style-type: none;
+  list-style-type: none;
 }
 
 #quickAccessList i{
@@ -173,11 +173,11 @@ li {
   display: flex;
   align-items: center;
   justify-content: space-around;
- }
+}
 
- h5 {
+h5 {
   text-align: center;
- }
+}
 
 /* Estilo para o armazenamento */
 .storage-info {
@@ -335,6 +335,11 @@ circle {
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
 }
 
+#dropzone.dragover {
+  border: 2px dashed #4CAF50;
+  background-color: rgba(76, 175, 80, 0.1);
+}
+
 .upload-area {
   border-radius: 12px;
   border: 2px dashed var(--cor-borda-upload);
@@ -364,6 +369,30 @@ circle {
   cursor: pointer;
 }
 
+.upload-area button:hover {
+  background-color: #2563eb;
+  /* Cor de hover do botão */
+}
+
+.upload-actions {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.upload-actions button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #3b82f6; /* Cor do botão */
+  color: white;
+  border: none;
+  border-radius: 8px;
+}
+
+.upload-actions button:hover {
+  background-color: #2563eb; /* Cor de hover do botão */
+}
+
 .file-list {
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
@@ -375,7 +404,7 @@ circle {
   border-collapse: collapse;
 }
 
-.file-list h4 { 
+.file-list h4 {
   padding-left: 8px;
   text-align: center;
 }
@@ -388,9 +417,10 @@ circle {
   font-size: 0.75rem;
 }
 
-.file-list tr{
+.file-list tr {
   border-radius: 50%;
 }
+
 .app-footer {
   width: 100%;
   height: 50px;
@@ -401,4 +431,3 @@ circle {
   position: absolute;
   bottom: 0;
 }
-
