--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -346,7 +346,7 @@ circle {
   background-color: var(#3b82f6); /* Ou adaptar para tema escuro depois */
   text-align: center;
   padding: 40px 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   transition: 0.3s;
 }
 
@@ -370,12 +370,11 @@ circle {
 }
 
 .upload-area button:hover {
-  background-color: #2563eb;
-  /* Cor de hover do botão */
+  background-color: #2563eb;  /* Cor de hover do botão */
 }
 
 .upload-actions {
-  margin-top: 20px;
+  margin-top: 0px;
   text-align: center;
 }
 
