--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -346,13 +346,19 @@ circle {
   background-color: var(#3b82f6); /* Ou adaptar para tema escuro depois */
   text-align: center;
   padding: 40px 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   transition: 0.3s;
 }
 
 .upload-area:hover {
   background-color: var(--cor-fundo-upload);
   cursor: pointer;
+}
+
+.upload-area i {
+  font-size: 48px;
+  color: var(--cor-texto);
+  margin-bottom: 12px;
 }
 
 .upload-area p {
@@ -370,15 +376,19 @@ circle {
 }
 
 .upload-area button:hover {
-  background-color: #2563eb;  /* Cor de hover do botão */
+  background-color: #2563eb;
+  /* Cor de hover do botão */
 }
 
 .upload-actions {
-  margin-top: 0px;
+  margin-top: 20px;
   text-align: center;
+  display: flex;
+  justify-content: left;
 }
 
 .upload-actions button {
+  margin: 0 20px 0 0;
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
@@ -386,8 +396,6 @@ circle {
   color: white;
   border: none;
   border-radius: 8px;
-  display: flex;
-  justify-content: left;
 }
 
 .upload-actions button:hover {
